2001-07-23  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/state/gnome.jl (gnome-event-proxyer): fixed bug
	caused by Click1 events now printing as Click. This caused only
	button-release events to be proxied

2001-07-02  John Harper  <jsh@pixelslut.com>

	* version 0.99

2001-06-18  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/menus.jl (menu-program-stays-running): by popular
	demand this now defaults to `t'

	* sawfish/wm/windows.jl (focus-desktop): new command, focuses
	the desktop window if one exists

2001-06-04  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/commands/move-resize.jl (do-move-resize): move the
	call to draw-window-outline to immediately before entering the
	recursive event loop (avoids drawing and not erasing it on a
	non-viable drag)

2001-05-04  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/gnome.jl (gnome-event-proxyer): support
	`OffN' events
	* sawfish/wm/util/decode-events.jl: ditto

	* sawfish/wm/keymaps.jl (title-keymap): bind
	toggle-window-shaded to an X-Off2 binding instead of X-Click2

2001-04-22  John Harper  <jsh@eazel.com>

	Fixed bug 4250 (pointer can confuse focus follows mouse when
	cycling):

	* sawfish/wm/focus.jl (focus-ignore-pointer-events): new
	variable. When true, pointer in/out events have no effect on
	the input focus

	* sawfish/wm/commands/x-cycle.jl (cycle-begin): while cycling
	set focus-ignore-pointer-events to true. Don't restore it to
	false until 100ms after the cycling finishes (so that any
	pointer out events generated by, e.g., removing the message
	window are ignored)

2001-04-22  John Harper  <jsh@eazel.com>

	* sawfish/wm/viewport.jl (set-viewport): rewrote the code that
	changes viewports. It now tries to order the window moves in
	such a way as to minimize redundant pointer in/out and expose
	events. The ordering algorithm was suggested by Jan Kasprzak
	<kas@informatics.muni.cz> last September

2001-04-20  John Harper  <jsh@eazel.com>
