@@ -1,3 +1,8 @@
+Sat Aug 18 16:32:37 2001  Owen Taylor  <otaylor@redhat.com>
+
+	* sawfish/wm/windows.jl: Offset windows properly whose gravity
+	point is centered horizontally or vertically.
+
 2001-07-23  John Harper  <jsh@pixelslut.com>
 
 	* sawfish/wm/state/gnome.jl (gnome-event-proxyer): fixed bug
